--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@phosphor-icons/react": "^2.1.10",
     "@supabase/supabase-js": "^2.76.1",
     "axios": "^1.12.2",
+    "embla-carousel-react": "^8.6.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hot-toast": "^2.6.0",
-    "xlsx": "^0.18.5"
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
